# ygo-deck-builder-C

./: .gitignore  INSTALL.md  LICENSE  README.md  meson.build
data/: com.pai535.YGODeckBuilder.desktop
docs/: deck encoding and decoding.md  memory-and-performance-optimization.md
src/: app_path.h  app_types.h  card_info.c  card_info.h  card_shuffle.c  card_shuffle.h  card_sort.c  card_sort.h  deck_clear.c  deck_clear.h  deck_io.c  deck_io.h  deck_slot.c  deck_slot.h  deck_url.c  deck_url.h  dnd_manager.c  dnd_manager.h  forbidden_list.c  forbidden_list.h  image_cache.h  image_loader.c  image_loader.h  main.c  meson.build  offline_data.c  offline_data.h  prerelease.c  prerelease.h  search_filter.c  search_filter.h  startup_update.c  startup_update.h
