executable(
  'ygo-deck-builder',
  [
    'main.c',
    'startup_update.c',
    'prerelease.c',
    'offline_data.c',
    'card_info.c',
    'card_sort.c',
    'card_shuffle.c',
    'deck_slot.c',
    'forbidden_list.c',
    'deck_clear.c',
    'deck_io.c',
    'image_loader.c',
    'dnd_manager.c',
    'search_filter.c',
    'deck_url.c'
  ],
  dependencies: deps,
  install: true,
)
